<resources>
    <string name="privacy_content_tip">“车一百考驾照”移动应用由深圳市汇车网络技术有限公司（后简称“汇车网络”）研发，持有版权并受法律保护。</string>
    <string name="privacy_content"><Data> &amp;#160;&amp;#160;&amp;#160;&amp;#160;&amp;#160;&amp;#160;&amp;#160;&amp;#160;“车一百考驾照”移动应用由深圳市汇车网络技术有限公司（后简称“汇车网络”）研发，持有版权并受法律保护。 &lt;div> &lt;ul> &lt;li>本软件是一款生活服务类移动应用软件，由汇车网络研发并持有软件相关一切版权及知识产权，软件相关研发技术、界面排版、UI设计、特色功能等成果均享有知识产权专利保护，不得抄袭、反向编译用以商业使用。&lt;/li> &lt;li>本软件涉及互联网服务和移动通信服务协议，在使用过程中可能需获取用户网络状态，如因网络故障、系统不稳定或其他原因致使用户遭受经济损失，汇车网络及合作单位不承担相关法律责任。&lt;/li> &lt;li>任何个人及单位在未经汇车网络允许的情况下，不得使用本软件进行商业或其他盈利性目的使用，如有违反，汇车网络有权进行起诉及追究其相关法律责任。&lt;/li> &lt;/ul> &lt;/div> </Data></string>
    <string name="about_content">"        “车一百考驾照”是深圳市汇车网络技术有限公司开发的一款为用户提供最新最全驾照考试学习的手机应用软件。
         为车主提供最专业服务平台，我们一直在路上。"</string>
    <string name="fakuan"><Data> &lt;div> &lt;ul> &lt;li>5—50元：行人、乘车人、非机动车驾驶人违反道路交通安全法律、法规关于道路通行规定的；&lt;/li> &lt;li>20—200元：违规停车不在现场的；违规停车在现场但拒绝驶离的；未放置保险标志的；&lt;/li> &lt;li>200—500元：客运车辆超员，但没超过百分之二十的；货运车辆超过核定载质量的，但没超过百分之三十的；&lt;/li> &lt;li>200—2000元：未取得机动车驾驶证、机动车驾驶证被吊销或者机动车驾驶证被暂扣期间驾驶机动车的；将机动车交由未取得机动车驾驶证或者机动车驾驶证被吊销、暂扣的人驾驶的；造成交通事故后逃逸，尚不构成犯罪的；机动车行驶超过规定时速百分之五十的；强迫机动车驾驶人违反道路交通安全法律、法规和机动车安全驾驶要求驾驶机动车，造成交通事故，尚不构成犯罪的；违反交通管制的规定强行通行，不听劝阻的；故意损毁、移动、涂改交通设施，造成危害后果，尚不构成犯罪的；非法拦截、扣留机动车辆，不听劝阻，造成交通严重阻塞或者较大财产损失的。非法安装警报器、标志灯具的；&lt;/li> &lt;li>500—2000元：客运车辆超员百分之二十以上，或违反规定载货；货运车辆超过核定载质量百分之三十或者违反载客；&lt;/li> &lt;li>1000—2000元：饮酒后驾驶机动车的；因饮酒后驾驶机动车被处罚，再次饮酒后驾驶机动车的；&lt;/li> &lt;li>2000—5000元：使用其他车辆的机动车登记证书、号牌、行驶证、检验合格标志、保险标志的；伪造、变造或者使用伪造、变造的机动车登记证书、号牌、行驶证、驾驶证的。&lt;/li> &lt;/ul> &lt;/div> </Data></string>
    <string name="jiaogui"><Data> &lt;div> &lt;ul> &lt;li>答题中所有题一个原则——安全，因此怎么做安全就怎么做；&lt;/li> &lt;li>判断题中遇到紧急情况所有过激行为都错，比如急踩（用力踏）油门（制动），急转方向，选择题中类似的答案都错；&lt;/li> &lt;li>能让行的都让行，能帮助的都帮助，能避让就避让，只要不抢、不急都对；&lt;/li> &lt;li>抢救伤员一个原则先救人，救人一个原则先止血；&lt;/li> &lt;li>无标志无灯无警路口，按照让右路——让左转——让直行的顺序判断；&lt;/li> &lt;li>车辆变换位置都要开转向灯，唯一一个不开的就是进环岛（转盘）；&lt;/li> &lt;li>红色是禁令、黄色是警告、蓝色是指示，三种颜色都没有是辅助；&lt;/li> &lt;li>禁令对禁止、警告对警告、指示对指示，相同就对，不相同就错；&lt;/li> &lt;li>黄灯亮与黄灯闪烁只一字之差。“闪烁”确保安全，“亮”不准通行，但越线的可通行；&lt;/li> &lt;li>远光灯、近光灯的考题只能使用近光灯，不准使用远光灯；&lt;/li> &lt;li>只有冰雪道路是下坡先行，其余都是上坡先行；如果出现两个上坡先行，就选字多的；&lt;/li> &lt;li>有省选省，无省选县；&lt;/li> &lt;li>户籍地对户籍地，暂住地对暂住地。&lt;/li> &lt;/ul> &lt;/div> </Data></string>
    <string name="anquanjuli"><Data> &lt;b>普通公路&lt;/b> &lt;div> &lt;ul> &lt;li>白天或夜间在公路上发生故障时，设警告标志位置为车后50～100米处；&lt;/li> &lt;li>使用软连接牵引装置时，两车之间的距离大于4米小于10米；&lt;/li> &lt;li>夜间会车时，在距离150米以外改用近光灯；&lt;/li> &lt;li>在交叉路口、急弯路、窄桥、桥梁、陡坡、铁道路口、隧道，50米以内不得停车；&lt;/li> &lt;li>在公交汽车站、急救站、加油站、消防队（站），30米以内不得停车。&lt;/li> &lt;/ul> &lt;/div> &lt;b>高速公路&lt;/b> &lt;div> &lt;ul> &lt;li>高速公路上发生故障时，设警告标志位置为车后150米以外；&lt;/li> &lt;li>时速超过100公里时，需保持100米以上的安全距离；&lt;/li> &lt;li>时速低于100公里时，需保持50米以上的安全距离；&lt;/li> &lt;li>车速为100公里时，最小横向间距为1.5米；安全距离为100米；危险车间距为50米；&lt;/li> &lt;li>驶离高速公路最佳时机，离出口500米处。&lt;/li> &lt;/ul> &lt;/div> </Data></string>
    <string name="jiaojingshoushi"><Data> &lt;div> &lt;ul> &lt;li>停止信号：左臂由前向上直伸，掌心向前；&lt;/li> &lt;li>直行信号：两手平伸右手摆；&lt;/li> &lt;li>左转弯信号：右臂向前平伸，左手向右摆动；&lt;/li> &lt;li>右转弯信号：左臂向前平伸，右手向左摆动；&lt;/li> &lt;li>左转弯待转信号：左臂向左平伸成45度，上下摆动；&lt;/li> &lt;li>变道信号：右臂向前平伸，掌心向左，右臂向左水平摆动；&lt;/li> &lt;li>减速慢行信号：右臂向右前方平伸，掌心向下，平直向下摆动；&lt;/li> &lt;li>示意车辆靠边停车信号：左臂由前向上直伸，掌心向前，右臂向前摆动。&lt;/li> &lt;/ul> &lt;/div> </Data></string>
    <string name="chufa"><Data> &lt;div> &lt;ul> &lt;li>扣留机动车：未悬挂车牌、检验合格标志、保险标志；未携带行驶证、伪造相关证件或使用其他车辆证件；在一个计分周期达到12分；&lt;/li> &lt;li>收缴号牌：伪造或假冒车牌号；&lt;/li> &lt;li>警告：不按规定挂号牌；&lt;/li> &lt;li>拘留15天：未有有效驾驶证（被吊销、被暂扣等）、造成交通事故后逃逸但不构成犯罪（逃逸吊销，终身不能重新取得）；&lt;/li> &lt;li>吊销：将车给没有驾驶资格的人、超速百分之五十、非法改装车辆、报废、无正当理由逾期不接受处理；&lt;/li> &lt;li>有期徒刑：犯交通肇事罪的，处3年以下有期徒刑或者拘役；因交通事故逃逸致人死亡的，处7年以上15年以下。&lt;/li> &lt;/ul> &lt;/div> </Data></string>
    <string name="shisuti"><Data> &lt;b>普通公路&lt;/b> &lt;div> &lt;ul> &lt;li>在没有限速标志、标线的道路情况下的最高时速:没有道路中心线的城市道路为30公里，公路为40公里；同方向只有一条机动车道的城市道路为50公里，公路为70公里；&lt;/li> &lt;li>遇雾、雨、雪、沙尘、冰雹，能见度在50米以内时，最高时速30公里；&lt;/li> &lt;li>掉头、转弯、下陡坡时，最高时速30公里；&lt;/li> &lt;li>在冰雪、泥泞的道路上行使时，最高时速30公里；&lt;/li> &lt;li>牵引发生故障的机动车时，最高时速30公里；&lt;/li> &lt;li>进出非机动车道，通过铁路道口、急转弯、窄路、窄桥时，最高时速30公里。&lt;/li> &lt;/ul> &lt;/div> &lt;b>高速公路&lt;/b> &lt;div> &lt;ul> &lt;li>正常行驶，最低时速60公里，最高时速120公里；&lt;/li> &lt;li>当同前车保持100米安全距离时，最高时速100公里；&lt;/li> &lt;li>同向2车道的最低时速为：左侧车道100公里；&lt;/li> &lt;li>同向3车道的最低时速为：左侧车道110公里；中间车道90公里；右侧车道60公里；&lt;/li> &lt;li>能见度小于50米，在开启雾灯、近光灯、示廓灯、前后位灯、危险报警闪光灯时，最高车速20公里，并从最近的出口尽快驶离高速公里；&lt;/li> &lt;li>能见度小于100米，在开启雾灯、近光灯、示廓灯、前后位灯、危险报警闪光灯时，最高车速40公里，与同车道前车保持50米以上的距离；&lt;/li> &lt;li>能见度小于200米，在开启雾灯、近光灯、示廓灯、前后位灯时，最高车速60公里，与同车道前车保持100米以上的距离。&lt;/li> &lt;/ul> &lt;/div> </Data></string>
    <string name="koufenbiaozhun"><Data> &lt;b>一次扣12分&lt;/b> &lt;div> &lt;ul> &lt;li>驾驶与准驾车型不符的机动车的；&lt;/li> &lt;li>饮酒后驾驶机动车的；&lt;/li> &lt;li>驾驶营运客车（不包括公共汽车）、校车载人超过核定人数百分之二十以上的&lt;/li> &lt;li>造成交通事故后逃逸，尚不构成犯罪的；&lt;/li> &lt;li>上道路行驶的机动车未悬挂机动车号牌的，或者故意遮挡、污损、不按规定安装机动车号牌的；&lt;/li> &lt;li>使用伪造、变造的机动车号牌、行驶证、驾驶证、校车标牌或者使用其他机动车号牌、行驶证的；&lt;/li> &lt;li>驾驶机动车在高速公路上倒车、逆行、穿越中央分隔带掉头的；&lt;/li> &lt;li>驾驶营运客车在高速公路车道内停车的；&lt;/li> &lt;li>驾驶中型以上载客载货汽车、校车、危险物品运输车辆在高速公路、城市快速路上行驶超过规定时速百分之二十以上或者在高速公路、城市快速路以外的道路上行驶超过规定时速百分之五十以上，以及驾驶其他机动车行驶超过规定时速百分之五十以上的；&lt;/li> &lt;li>连续驾驶中型以上载客汽车、危险物品运输车辆超过4小时未停车休息或者停车休息时间少于20分钟的；&lt;/li> &lt;li>未取得校车驾驶资格驾驶校车的。&lt;/li> &lt;/ul> &lt;/div> &lt;b>一次扣6分&lt;/b> &lt;div> &lt;ul> &lt;li>机动车驾驶证被暂扣期间驾驶机动车的；&lt;/li> &lt;li>驾驶机动车违反道路交通信号灯通行的；&lt;/li> &lt;li>驾驶营运客车（不包括公共汽车）、校车载人超过核定人数未达百分之二十的，或者驾驶其他载客汽车载人超过核定人数百分之二十以上的；&lt;/li> &lt;li>驾驶中型以上载客载货汽车、校车、危险物品运输车辆在高速公路、城市快速路上行驶超过规定时速未达百分之二十的；&lt;/li> &lt;li>驾驶中型以上载客载货汽车、校车、危险物品运输车辆在高速公路、城市快速路以外的道路上行驶或者驾驶其他机动车行驶超过规定时速百分之二十以上未达到百分之五十的；&lt;/li> &lt;li>驾驶货车载物超过核定载质量百分之三十以上或者违反规定载客的；&lt;/li> &lt;li>驾驶营运客车以外的机动车在高速公路车道内停车的；&lt;/li> &lt;li>驾驶机动车在高速公路或者城市快速路上违法占用应急车道行驶的；&lt;/li> &lt;li>低能见度气象条件下，驾驶机动车在高速公路上不按规定行驶的；&lt;/li> &lt;li>驾驶机动车运载超限的不可解体的物品，未按指定的时间、路线、速度行驶或者未悬挂明显标志的；&lt;/li> &lt;li>驾驶机动车载运爆炸物品、易燃易爆化学物品以及剧毒、放射性等危险物品，未按指定的时间、路线、速度行驶或者未悬挂警示标志并采取必要的安全措施的；&lt;/li> &lt;li>以隐瞒、欺骗手段补领机动车驾驶证的；&lt;/li> &lt;li>连续驾驶中型以上载客汽车、危险物品运输车辆以外的机动车超过4小时未停车休息或者停车休息时间少于20分钟的；&lt;/li> &lt;li>驾驶机动车不按照规定避让校车的。&lt;/li> &lt;/ul> &lt;/div> &lt;b>一次扣3分&lt;/b> &lt;div> &lt;ul> &lt;li>驾驶营运客车（不包括公共汽车）、校车以外的载客汽车载人超过核定人数未达百分之二十的；&lt;/li> &lt;li>驾驶中型以上载客载货汽车、危险物品运输车辆在高速公路、城市快速路以外的道路上行驶或者驾驶其他机动车行驶超过规定时速未达百分之二十的；&lt;/li> &lt;li>驾驶货车载物超过核定载质量未达百分之三十的；&lt;/li> &lt;li>驾驶机动车在高速公路上行驶低于规定最低时速的；&lt;/li> &lt;li>驾驶禁止驶入高速公路的机动车驶入高速公路的；&lt;/li> &lt;li>驾驶机动车在高速公路或者城市快速路上不按规定车道行驶的；&lt;/li> &lt;li>驾驶机动车行经人行横道，不按规定减速、停车、避让行人的；&lt;/li> &lt;li>驾驶机动车违反禁令标志、禁止 标线指示的；&lt;/li> &lt;li>驾驶机动车不按规定超车、让行的，或者逆向行驶的；&lt;/li> &lt;li>驾驶机动车违反规定牵引挂车的；&lt;/li> &lt;li>在道路上车辆发生故障、事故停车后，不按规定使用灯光和设置警告标志的；&lt;/li> &lt;li>上道路行驶的机动车未按规定定期进行安全技术检验的。&lt;/li> &lt;/ul> &lt;/div> &lt;b>一次扣2分&lt;/b> &lt;div> &lt;ul> &lt;li>驾驶机动车行经交叉路口不按规定行车或者停车的；&lt;/li> &lt;li>驾驶机动车有拨打、接听手持电话等妨碍安全驾驶的行为的；&lt;/li> &lt;li>驾驶二轮摩托车，不戴安全头盔的；&lt;/li> &lt;li>驾驶机动车在高速公路或者城市快速路上行驶时，驾驶人未按规定系安全带的；&lt;/li> &lt;li>驾驶机动车遇前方机动车停车排队或者缓慢行驶时，借道超车或者占用对面车道、穿插等候车辆的；&lt;/li> &lt;li>不按照规定为校车配备安全设备，或者不按照规定对校车进行安全维护的；&lt;/li> &lt;li>驾驶校车运载学生，不按照规定放置校车标牌、开启校车标志灯，或者不按照经审核确定的线路行驶的；&lt;/li> &lt;li>校车上下学生，不按照规定在校车停靠站点停靠的；&lt;/li> &lt;li>校车未运载学生上道路行驶，使用校车标牌、校车标志灯和停车指示标志的；&lt;/li> &lt;li>驾驶校车上道路行驶前，未对校车车况是否符合安全技术要求进行检查，或者驾驶存在安全隐患的校车上道路行驶的；&lt;/li> &lt;li>在校车载有学生时给车辆加油，或者在校车发动机引擎熄灭前离开驾驶座位的。&lt;/li> &lt;/ul> &lt;/div> &lt;b>一次扣1分&lt;/b> &lt;div> &lt;ul> &lt;li>驾驶机动车不按规定使用灯光的；&lt;/li> &lt;li>驾驶机动车不按规定会车的；&lt;/li> &lt;li>驾驶机动车载货长度、宽度、高度超过规定的；&lt;/li> &lt;li>上道路行驶的机动车未放置检验合格标志、保险标志，未随车携带行驶证、机动车驾驶证的。&lt;/li> &lt;/ul> &lt;/div> </Data></string>
    <string name="riqi"><Data> &lt;div> &lt;ul> &lt;li>事故后逃逸，不构成犯罪，并处15日以下拘留；&lt;/li> &lt;li>小型车非营运从注册登记之日起，6年以内每2年检验1次；&lt;/li> &lt;li>小型车非营运从注册登记之日起，超过6年不满15年的，每1年检验一次；&lt;/li> &lt;li>初次申领驾驶证后的12个月为实习期；&lt;/li> &lt;li>机动车驾驶证有效期分为6年、10年和长期；&lt;/li> &lt;li>道路交通安全违法行为累积记分周期为12个月；&lt;/li> &lt;li>驾驶人不得连续驾驶超过4小时未停车休息；&lt;/li> &lt;li>驾驶人连续驾车超过4小时，停车休息时间不得少于20分钟；&lt;/li> &lt;li>以不正当手段取得机动车登记或者驾驶许可的，撤销，申请人3年内不得再申请；&lt;/li> &lt;li>被扣留的机动车30日内不接受处理，公告3个月仍不接受处理的，依法拍卖；&lt;/li> &lt;li>机动车驾驶人发生重大事故构成犯罪的，处3年以下有期徒刑；&lt;/li> &lt;li>机动车驾驶人逃逸，处3年以上7年以下有期徒刑；&lt;/li> &lt;li>公安交警需要调查核实机动车来历证明的，30日内不来接受处理，不受扣留机动车时间限制；&lt;/li> &lt;li>当事人未在事故现场报警，事后请求处理的，应当在提出请求后10日内提供证据；&lt;/li> &lt;li>请求交警部门调解损害赔偿的，可以在收到事故认定书之日起10日内提出书面申请；&lt;/li> &lt;li>调解参加人因故不能按期参加调解的，应提前24小时通知交警，请求变更时间；&lt;/li> &lt;li>吊销驾驶证未满2年的不得申请驾驶证；&lt;/li> &lt;li>撤销驾驶许可未满3年的不得申请驾驶证；&lt;/li> &lt;li>小型申请增加大型货车准驾车型的，应当在申请前最近1个周期内没有满分记录；&lt;/li> &lt;li>申请机动车驾驶证考试，每个科目考试1次，可以补考1次；&lt;/li> &lt;li>应当于驾驶证有效期满90日内，向核发地申请换证；&lt;/li> &lt;li>超过驾驶证有效期1年以上未换证的，应当注销其驾驶证；&lt;/li> &lt;li>一个周期内记分达到12分的，应当接受为期七日的教育；&lt;/li> &lt;li>年龄在60周岁以上，应当每1年提交一次身体检查；&lt;/li> &lt;li>年龄在60周岁以上的，在记分周期结束后15天内，提交身体条件的证明（各地实际执行时间情况不统一）；&lt;/li> &lt;li>驾驶证记载的信息发生变化的，应当在30日内申请换证；&lt;/li> &lt;li>机动车交通事故责任强制保险的保险期间为1年；&lt;/li> &lt;li>一年内有醉酒的行为，被处罚两次以上的，吊销驾驶证，5年内不准驾驶营运机动车；&lt;/li> &lt;li>大型、中型非营运机动车从注册登记之日起，10年内每年检验1次；&lt;/li> &lt;li>大型、中型非营运机动车从注册登记之日起，超过10年的，每6个月检验1次；&lt;/li> &lt;li>载客汽车从注册登记之日起，5年内每年检验1次；&lt;/li> &lt;li>载客汽车从注册登记之日起，超过5年的，每6个月检验1次；&lt;/li> &lt;li>申请增加大型客车准驾车型的，应当取得中型客车或者大型货车资格5年以上；&lt;/li> &lt;li>申请增加大型客车准驾车型的，应当在申请前最近连续3个记分周期内没有满分记录；&lt;/li> &lt;li>取得驾驶牵引车准驾车型资格2年以上，可以申请增加大型客车；&lt;/li> &lt;li>持有大客、公交、中客驾驶证的，在1个记分周期结束后，1年内未提交体检证明的，注销驾驶证；&lt;/li> &lt;li>载货汽车从注册登记之日起，10年以内每年检验1次；&lt;/li> &lt;li>载货汽车从注册登记之日起，超过10年的，每6个月检验1次；&lt;/li> &lt;li>载货汽车从注册登记之日起，超过10年的，每年检验2次；&lt;/li> &lt;li>年龄在60周岁以上或者持有牵引车、大货驾驶证的，在1个记分周期结束后，1年内未提交体检证明，注销驾驶证。&lt;/li> &lt;/ul> &lt;/div> </Data></string>
    <string name="app_name">驾校一点通</string>
    <string name="sure">确认</string>
    <string name="about">关于</string>
    <string name="official_platform">官方平台</string>
    <string name="version_info">版本信息</string>
    <string name="contact_info">联系方式</string>
    <string name="cur_version">当前版本：</string>
    <string name="official">官方网址：</string>
    <string name="weixin_code">微信号    ：</string>
    <string name="weixin_code_text">cheyibai</string>
    <string name="official_website">m.cheyibai.net</string>
    <string name="cooperation">商务合作： bd@cheyooh.com</string>
    <string name="copyright">"Copyright©2015 车一百
 All Rights Reserved"</string>
    <string name="exam_ques_setting_tip">不同的城市，不同的驾照类型题库不同，请正确选择！</string>
    <string name="city">城市</string>
    <string name="city_choose_tip">请选择城市</string>
    <string name="driver_licence_type">驾照类型</string>
    <string name="small_car">小车</string>
    <string name="truck">货车</string>
    <string name="bus">客车</string>
    <string name="simulation_exam_size_text">考题数量：</string>
    <string name="simulation_exam_size">%1$s题</string>
    <string name="simulation_exam_time_text">考试时间：</string>
    <string name="simulation_exam_time">%1$s分钟</string>
    <string name="simulation_exam_rule_text">考试规则：</string>
    <string name="simulation_exam_rule">满分100    90分及格</string>
    <string name="simulation_exam_tip">(答错%1$s题不及格，自动提交试卷)</string>
    <string name="simulation_exam">全真模拟考试</string>
    <string name="simulation_exam_undown">优先考未做题</string>
    <string name="exam_record">考试记录</string>
    <string name="exam_no_record">暂无考试记录</string>
    <string name="simulation_exam_score_title">考试成绩：</string>
    <string name="simulation_exam_time_title">考试用时：</string>
</resources>