<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/share_result_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="5.0dip" android:src="@drawable/ic_header" android:contentDescription="@null" />
    <TextView android:textSize="24.0sp" android:textColor="@color/black" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/app_name" />
    <RelativeLayout android:background="@drawable/simulation_exam_rule_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
        <ImageView android:id="@id/iv_user_head" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:src="@drawable/share_result_header" android:layout_centerHorizontal="true" android:contentDescription="@null" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_score" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:layout_below="@id/iv_user_head">
            <TextView android:textSize="24.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/simulation_exam_score_title" />
            <TextView android:textSize="24.0sp" android:textColor="@color/color_60b347" android:id="@id/tv_share_score" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <View android:id="@id/v_line" android:background="@color/color_ededed" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/ll_score" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_time" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:layout_below="@id/v_line">
            <TextView android:textSize="24.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/simulation_exam_time_title" />
            <TextView android:textSize="24.0sp" android:textColor="@color/color_60b347" android:id="@id/tv_share_time" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <View android:id="@id/v_line_seconde" android:background="@color/color_ededed" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/ll_time" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/ll_comment" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:layout_below="@id/v_line_seconde">
            <TextView android:textSize="18.0sp" android:textColor="@color/color_f83434" android:id="@id/tv_share_comment" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about" />
            <ImageView android:id="@id/iv_share_good" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_comment_good" android:contentDescription="@null" />
        </LinearLayout>
    </RelativeLayout>
    <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:src="@drawable/share_result_ad" android:contentDescription="@null" />
    <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/share_result_code" android:contentDescription="@null" />
</LinearLayout>